syntax = "proto3";

package report;
option go_package = "max.ks1230/finances-bot/api;apiv1";

message ReportRequest {
  int64 userID = 1;
  string period = 2;
}